<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignInFragment">
    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/it_scoppelletti_marginHorz"
        android:layout_marginVertical="@dimen/it_scoppelletti_marginVert"
        android:orientation="vertical">
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/lblEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/lbl_email">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/lblPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/lbl_password"
            android:layout_marginTop="@dimen/it_scoppelletti_spacingVert"
            app:endIconMode="password_toggle">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/cmdSignIn"
            android:text="@string/cmd_signIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/it_scoppelletti_spacingVert"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton" />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/cmdSignUp"
            android:text="@string/cmd_signUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/it_scoppelletti_spacingVert"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton" />
        <com.google.android.gms.common.SignInButton
            android:id="@+id/cmdGoogle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/it_scoppelletti_marginHorz"
            android:layout_marginVertical="@dimen/it_scoppelletti_marginVert" />
        <com.facebook.login.widget.LoginButton
            android:id="@+id/cmdFacebook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/it_scoppelletti_marginHorz"
            android:layout_marginVertical="@dimen/it_scoppelletti_marginVert" />
    </LinearLayout>
</androidx.core.widget.NestedScrollView>
