<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserFragment"
    tools:ignore="rtlHardcoded">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/it_scoppelletti_marginHorz"
        android:layout_marginVertical="@dimen/it_scoppelletti_marginVert">
        <TextView android:id="@+id/lblUserName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBaseline_toBaselineOf="@id/txtUserName"
            android:text="@string/lbl_userName" />
        <TextView android:id="@+id/txtUserName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/it_scoppelletti_spacingHorz"
            android:layout_marginTop="@dimen/it_scoppelletti_spacingVert"
            app:layout_constraintLeft_toRightOf="@id/lblBarrier"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/txtEmail"
            style="@style/Widget.Scoppelletti.TextView.PrimaryText"
            tools:text="Joe Doe" />
        <TextView android:id="@+id/lblEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBaseline_toBaselineOf="@id/txtEmail"
            android:text="@string/lbl_email" />
        <TextView android:id="@+id/txtEmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/it_scoppelletti_spacingHorz"
            android:layout_marginTop="@dimen/it_scoppelletti_spacingVert"
            app:layout_constraintLeft_toRightOf="@id/lblBarrier"
            app:layout_constraintTop_toBottomOf="@id/txtUserName"
            style="@style/Widget.Scoppelletti.TextView.PrimaryText"
            tools:text="joe.doe@gmail.com" />
        <TextView android:id="@+id/lblEmailVerified"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBaseline_toBaselineOf="@id/txtEmailVerified"
            android:text="@string/lbl_emailVerified" />
        <TextView android:id="@+id/txtEmailVerified"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/it_scoppelletti_spacingHorz"
            android:layout_marginTop="@dimen/it_scoppelletti_spacingVert"
            app:layout_constraintLeft_toRightOf="@id/lblBarrier"
            app:layout_constraintTop_toBottomOf="@id/txtEmail"
            app:layout_constraintBottom_toTopOf="@id/txtProviderId"
            style="@style/Widget.Scoppelletti.TextView.PrimaryText"
            tools:text="yes" />
        <TextView android:id="@+id/lblProviderId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBaseline_toBaselineOf="@id/txtProviderId"
            android:text="@string/lbl_providerId" />
        <TextView android:id="@+id/txtProviderId"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/it_scoppelletti_spacingHorz"
            android:layout_marginTop="@dimen/it_scoppelletti_spacingVert"
            app:layout_constraintLeft_toRightOf="@id/lblBarrier"
            app:layout_constraintTop_toBottomOf="@id/txtEmailVerified"
            style="@style/Widget.Scoppelletti.TextView.PrimaryText"
            tools:text="yes" />
        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/lblBarrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="right"
            app:constraint_referenced_ids="lblUserName,lblEmail,lblEmailVerified,lblProviderId" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
